--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@ noAds: true
 ================================================== -->
 <section class="intro full-width">
     <div class="wrapintro">
-        <h1>The Rules Of The Sports You Love, Simply Explained, To Get You Playing Now.</h1> 
-        <h2 class="lead">Providing expert guides on the basics of the rules and equipment on a variety of sports - to get you playing and enjoying sport today.</h2>
+        <h1>Unleashing America's Wildlife Wonders.</h1> 
+        <h2 class="lead">Your Comprehensive Guide to Family-Friendly, Accessible Zoos across the nation and Where to spot Your favorite animals.</h2>
     </div>
 </section>
 
