--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Online Bowls Guides and Reviews
+title: Online Guides To The Best Zoos In The US State-By-State
 canonical: /
 noAds: true
 ---
